k3s/apps/services/bitwarden/ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: bitwardenrs
  name: bitwarden-ing-admin
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: services-authelia-auth@kubernetescrd,kube-system-traefik-errors@kubernetescrd,services-traefik-real-ip@kubernetescrd,services-rate-limit@kubernetescrd,services-authelia-headers@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: bitwarden.technolab.cloud
    external-dns.alpha.kubernetes.io/target: technolab.cloud
spec:
  rules:
  - host: bitwarden.technolab.cloud
    http:
      paths:
      - path: /admin
        backend:
          serviceName: bitwarden-bitwardenrs
          servicePort: 8443
  tls:
  - hosts:
    - bitwarden.technolab.cloud
    secretName: services-technolab-cloudflare-org-tls
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: bitwardenrs
  name: bitwarden-ing
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: services-bitwarden-buffer@kubernetescrd,services-bitwarden-connection@kubernetescrd,kube-system-traefik-errors@kubernetescrd,services-traefik-real-ip@kubernetescrd,services-rate-limit@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: bitwarden.technolab.cloud
    external-dns.alpha.kubernetes.io/target: technolab.cloud
spec:
  rules:
  - host: bitwarden.technolab.cloud
    http:
      paths:
      - path: /
        backend:
          serviceName: bitwarden-bitwardenrs
          servicePort: 8443
  tls:
  - hosts:
    - bitwarden.technolab.cloud
    secretName: services-technolab-cloudflare-org-tls
